--- a/BCKarcmove/app.config
+++ b/BCKarcmove/app.config
@@ -18,26 +18,29 @@
   <applicationSettings>
     <BCKarcmove.Properties.Settings>
       <setting name="ReservePath" serializeAs="String">
-        <value>D:\DEV2\</value>
+        <value>d:\Temp\TMP2\</value>
       </setting>
       <setting name="DaysToLive" serializeAs="String">
         <value>3</value>
       </setting>
       <setting name="BackupPath" serializeAs="String">
-        <value>D:\DEV\</value>
+        <value>d:\Temp\TMP1\</value>
       </setting>
       <setting name="MailAddress" serializeAs="String">
-        <value>p607ivc@minoblgu.by</value>
+        <value>F506-U001@mfrb.by</value>
       </setting>
     </BCKarcmove.Properties.Settings>
   </applicationSettings>
   <userSettings>
     <BCKarcmove.Properties.Settings>
       <setting name="Mailpwd" serializeAs="String">
-        <value>qwe123DSA</value>
+        <value>AidDeath†</value>
       </setting>
       <setting name="Mailserver" serializeAs="String">
-        <value>ominskex</value>
+        <value>mail.mfrb.by</value>
+      </setting>
+      <setting name="ArchiveDirectly" serializeAs="String">
+        <value>False</value>
       </setting>
     </BCKarcmove.Properties.Settings>
   </userSettings>
