--- a/BCKarcmove/app.config
+++ b/BCKarcmove/app.config
@@ -18,7 +18,7 @@
   <applicationSettings>
     <BCKarcmove.Properties.Settings>
       <setting name="ReservePath" serializeAs="String">
-        <value>d:\Temp\TMP2\</value>
+        <value>\\F506-SR-DOC\BackUp_OGU\</value>
       </setting>
       <setting name="DaysToLive" serializeAs="String">
         <value>3</value>
@@ -40,7 +40,7 @@
         <value>mail.mfrb.by</value>
       </setting>
       <setting name="ArchiveDirectly" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
     </BCKarcmove.Properties.Settings>
   </userSettings>
