Добавлен параметр с типом архиватора

--- a/BCKarcmove/app.config
+++ b/BCKarcmove/app.config
@@ -29,6 +29,9 @@
       <setting name="MailAddress" serializeAs="String">
         <value>F506-U001@mfrb.by</value>
       </setting>
+      <setting name="ArchiverType" serializeAs="String">
+        <value>0</value>
+      </setting>
     </BCKarcmove.Properties.Settings>
   </applicationSettings>
   <userSettings>
