--- a/BCKarcmove/Properties/Settings.settings
+++ b/BCKarcmove/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="ArchiveDirectly" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ArchiverType" Type="System.Int16" Scope="Application">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
