--- a/BCKarcmove/app.config
+++ b/BCKarcmove/app.config
@@ -18,7 +18,7 @@
   <applicationSettings>
     <BCKarcmove.Properties.Settings>
       <setting name="ReservePath" serializeAs="String">
-        <value>\\F506-SR-DOC\BackUp_OGU\</value>
+        <value>d:\Temp\TMP2\</value>
       </setting>
       <setting name="DaysToLive" serializeAs="String">
         <value>3</value>
@@ -30,7 +30,10 @@
         <value>F506-U001@mfrb.by</value>
       </setting>
       <setting name="ArchiverType" serializeAs="String">
-        <value>0</value>
+        <value>1</value>
+      </setting>
+      <setting name="GenerateImage" serializeAs="String">
+        <value>True</value>
       </setting>
     </BCKarcmove.Properties.Settings>
   </applicationSettings>
@@ -43,7 +46,7 @@
         <value>mail.mfrb.by</value>
       </setting>
       <setting name="ArchiveDirectly" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
     </BCKarcmove.Properties.Settings>
   </userSettings>
